crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__UP050.py.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP050.py:5:9: UP050 (useless-class-metaclass-type) [*] Class `A` uses `metaclass=type`, which is redundant
  |
5 | class A(metaclass=type):
  |         ^^^^^^^^^^^^^^ UP050 (useless-class-metaclass-type)
6 |     ...
  |
  = help: Remove `metaclass=type`

ℹ Safe fix
2 2 |     ...
3 3 | 
4 4 | 
5   |-class A(metaclass=type):
  5 |+class A:
6 6 |     ...
7 7 | 
8 8 | 

UP050.py:10:5: UP050 (useless-class-metaclass-type) [*] Class `A` uses `metaclass=type`, which is redundant
   |
 9 | class A(
10 |     metaclass=type
   |     ^^^^^^^^^^^^^^ UP050 (useless-class-metaclass-type)
11 | ):
12 |     ...
   |
   = help: Remove `metaclass=type`

ℹ Safe fix
6  6  |     ...
7  7  | 
8  8  | 
9     |-class A(
10    |-    metaclass=type
11    |-):
   9  |+class A:
12 10 |     ...
13 11 | 
14 12 | 

UP050.py:16:5: UP050 (useless-class-metaclass-type) [*] Class `A` uses `metaclass=type`, which is redundant
   |
15 | class A(
16 |     metaclass=type
   |     ^^^^^^^^^^^^^^ UP050 (useless-class-metaclass-type)
17 |     #
18 | ):
   |
   = help: Remove `metaclass=type`

ℹ Unsafe fix
12 12 |     ...
13 13 | 
14 14 | 
15    |-class A(
16    |-    metaclass=type
17    |-    #
18    |-):
   15 |+class A:
19 16 |     ...
20 17 | 
21 18 | 

UP050.py:24:5: UP050 (useless-class-metaclass-type) [*] Class `A` uses `metaclass=type`, which is redundant
   |
22 | class A(
23 |     #
24 |     metaclass=type
   |     ^^^^^^^^^^^^^^ UP050 (useless-class-metaclass-type)
25 | ):
26 |     ...
   |
   = help: Remove `metaclass=type`

ℹ Unsafe fix
19 19 |     ...
20 20 | 
21 21 | 
22    |-class A(
23    |-    #
24    |-    metaclass=type
25    |-):
   22 |+class A:
26 23 |     ...
27 24 | 
28 25 | 

UP050.py:30:5: UP050 (useless-class-metaclass-type) [*] Class `A` uses `metaclass=type`, which is redundant
   |
29 | class A(
30 |     metaclass=type,
   |     ^^^^^^^^^^^^^^ UP050 (useless-class-metaclass-type)
31 |     #
32 | ):
   |
   = help: Remove `metaclass=type`

ℹ Unsafe fix
26 26 |     ...
27 27 | 
28 28 | 
29    |-class A(
30    |-    metaclass=type,
31    |-    #
32    |-):
   29 |+class A:
33 30 |     ...
34 31 | 
35 32 | 

UP050.py:38:5: UP050 (useless-class-metaclass-type) [*] Class `A` uses `metaclass=type`, which is redundant
   |
36 | class A(
37 |     #
38 |     metaclass=type,
   |     ^^^^^^^^^^^^^^ UP050 (useless-class-metaclass-type)
39 |     #
40 | ):
   |
   = help: Remove `metaclass=type`

ℹ Unsafe fix
33 33 |     ...
34 34 | 
35 35 | 
36    |-class A(
37    |-    #
38    |-    metaclass=type,
39    |-    #
40    |-):
   36 |+class A:
41 37 |     ...
42 38 | 
43 39 | 

UP050.py:44:12: UP050 (useless-class-metaclass-type) [*] Class `B` uses `metaclass=type`, which is redundant
   |
44 | class B(A, metaclass=type):
   |            ^^^^^^^^^^^^^^ UP050 (useless-class-metaclass-type)
45 |     ...
   |
   = help: Remove `metaclass=type`

ℹ Safe fix
41 41 |     ...
42 42 | 
43 43 | 
44    |-class B(A, metaclass=type):
   44 |+class B(A):
45 45 |     ...
46 46 | 
47 47 | 

UP050.py:50:5: UP050 (useless-class-metaclass-type) [*] Class `B` uses `metaclass=type`, which is redundant
   |
48 | class B(
49 |     A,
50 |     metaclass=type,
   |     ^^^^^^^^^^^^^^ UP050 (useless-class-metaclass-type)
51 | ):
52 |     ...
   |
   = help: Remove `metaclass=type`

ℹ Safe fix
47 47 | 
48 48 | class B(
49 49 |     A,
50    |-    metaclass=type,
51 50 | ):
52 51 |     ...
53 52 | 

UP050.py:58:5: UP050 (useless-class-metaclass-type) [*] Class `B` uses `metaclass=type`, which is redundant
   |
56 |     A,
57 |     # comment
58 |     metaclass=type,
   |     ^^^^^^^^^^^^^^ UP050 (useless-class-metaclass-type)
59 | ):
60 |     ...
   |
   = help: Remove `metaclass=type`

ℹ Unsafe fix
54 54 | 
55 55 | class B(
56 56 |     A,
57    |-    # comment
58    |-    metaclass=type,
59 57 | ):
60 58 |     ...
61 59 | 

UP050.py:69:5: UP050 (useless-class-metaclass-type) [*] Class `A` uses `metaclass=type`, which is redundant
   |
68 | class A(
69 |     metaclass=type  # comment
   |     ^^^^^^^^^^^^^^ UP050 (useless-class-metaclass-type)
70 |     ,
71 | ):
   |
   = help: Remove `metaclass=type`

ℹ Unsafe fix
65 65 |         ...
66 66 | 
67 67 | 
68    |-class A(
69    |-    metaclass=type  # comment
70    |-    ,
71    |-):
   68 |+class A:
72 69 |     ...
73 70 | 
74 71 | 

UP050.py:83:9: UP050 (useless-class-metaclass-type) [*] Class `A` uses `metaclass=type`, which is redundant
   |
81 | import builtins
82 |
83 | class A(metaclass=builtins.type):
   |         ^^^^^^^^^^^^^^^^^^^^^^^ UP050 (useless-class-metaclass-type)
84 |     ...
   |
   = help: Remove `metaclass=type`

ℹ Safe fix
80 80 | 
81 81 | import builtins
82 82 | 
83    |-class A(metaclass=builtins.type):
   83 |+class A:
84 84 |     ...
