crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__future_annotations_pep_604_p37.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
future_annotations.py:40:4: UP045 (non-pep604-annotation-optional) [*] Use `X | None` for type annotations
   |
40 | x: Optional[int] = None
   |    ^^^^^^^^^^^^^ UP045 (non-pep604-annotation-optional)
41 |
42 | MyList: TypeAlias = Union[List[int], List[str]]
   |
   = help: Convert to `X | None`

ℹ Unsafe fix
37 37 |     return y
38 38 | 
39 39 | 
40    |-x: Optional[int] = None
   40 |+x: int | None = None
41 41 | 
42 42 | MyList: TypeAlias = Union[List[int], List[str]]
