crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__future_annotations_pep_604_py310.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
future_annotations.py:40:4: UP045 (non-pep604-annotation-optional) [*] Use `X | None` for type annotations
   |
40 | x: Optional[int] = None
   |    ^^^^^^^^^^^^^ UP045 (non-pep604-annotation-optional)
41 |
42 | MyList: TypeAlias = Union[List[int], List[str]]
   |
   = help: Convert to `X | None`

ℹ Safe fix
37 37 |     return y
38 38 | 
39 39 | 
40    |-x: Optional[int] = None
   40 |+x: int | None = None
41 41 | 
42 42 | MyList: TypeAlias = Union[List[int], List[str]]

future_annotations.py:42:21: UP007 (non-pep604-annotation-union) [*] Use `X | Y` for type annotations
   |
40 | x: Optional[int] = None
41 |
42 | MyList: TypeAlias = Union[List[int], List[str]]
   |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ UP007 (non-pep604-annotation-union)
   |
   = help: Convert to `X | Y`

ℹ Safe fix
39 39 | 
40 40 | x: Optional[int] = None
41 41 | 
42    |-MyList: TypeAlias = Union[List[int], List[str]]
   42 |+MyList: TypeAlias = List[int] | List[str]
